[package]
name = "gemm-program"
description = "GEMM is a proof-of-work token based on ORE."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gemm"

[features]
no-entrypoint = []
default = []

[dependencies]
drillx.workspace = true
mpl-token-metadata.workspace = true
gemm-api.workspace = true
gemm-utils.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true

[dev-dependencies]
rand = "0.8.5"
